<resources>
    <string name="app_name">WeatherToday</string>
    <string name="loaderInfo">Made by Michał Dela</string>
    <string name="forecast5days">5 days Forecast</string>
    <string name="forecast24hourhistory">24-Hour Historical Current Conditions</string>
    <string name="forecast12hours">Forecast 12-hour</string>
    <string name="settingsButton">Settings</string>
    <string name="backButton">Back</string>
    <string name="updateButton">Update</string>
    <string name="forecastTittle">Weather conditions for </string>
    <string name="Title24history">Weather for past 24 Hours:\n red line - temperature</string>
    <string name="Title12forecast">Weather for 12 Hours:\nRed line - temperature</string>
    <string name="Title5daysforecast">Weather forecast for next 5 Days:\nRed line - Maximal temperature\nBlue line - Minimal temperature</string>
    <string name="Probability">\nRain:\n</string>
    <string name="ChoseLanguage">Chose language</string>
    <string name="ChoseLanguageSummary">Chose your preferred language</string>
    <string name="LocalizationSettings">Localization settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="positionGPS">Get position from GPS</string>
    <string name="TypeCityName">Type name of your City:</string>
    <string name="CityHint">City name</string>
    <string name="Search">Search</string>
    <string name="LocalizedName">Localized name</string>
    <string name="Country">Country</string>
    <string name="AdministrativeArea">Administrative Area</string>
    <string name="Key">Key</string>

</resources>
