<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoccationSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="0.6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_weight="0.40"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/InformationAboutPlace"
                        android:textSize="15dp"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="6">
                    <Button
                        android:id="@+id/backBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:text="@string/backButton" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="4">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="6">

                    <Button
                        android:id="@+id/btnGPS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:text="@string/positionGPS" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="3">


                <TextView
                    android:textSize="15dp"
                    android:layout_weight="10"
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TypeCityName" />

                <EditText
                    android:id="@+id/editTextPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#000000"
                    android:inputType="textPersonName"
                    android:hint="@string/CityHint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="6">

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:text="@string/Search" />
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.2">
            <ScrollView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linerLayoutInside"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2">

                   <!-- <ListView
                        android:id="@+id/listView1"
                        android:layout_width="wrap_content"
                        android:layout_height="600dp"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:textColor="@color/colorPrimaryDark"></ListView>-->
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>